--- a/dsp/f407_pdm_mic/f407_pdm_mic.ioc
+++ b/dsp/f407_pdm_mic/f407_pdm_mic.ioc
@@ -32,7 +32,7 @@ I2S2.IPParameters=Instance,VirtualMode,FullDuplexMode,RealAudioFreq,ErrorAudioFr
 I2S2.Instance=SPI$Index
 I2S2.Mode=I2S_MODE_SLAVE_RX
 I2S2.RealAudioFreq=48.387 KHz
-I2S2.Standard=I2S_STANDARD_MSB
+I2S2.Standard=I2S_STANDARD_PHILIPS
 I2S2.VirtualMode=I2S_MODE_SLAVE
 I2S3.AudioFreq=I2S_AUDIOFREQ_48K
 I2S3.DataFormat=I2S_DATAFORMAT_24B
@@ -65,11 +65,11 @@ Mcu.Pin14=VP_SYS_VS_Systick
 Mcu.Pin2=PC3
 Mcu.Pin3=PA0-WKUP
 Mcu.Pin4=PA1
-Mcu.Pin5=PA4
-Mcu.Pin6=PB10
-Mcu.Pin7=PB12
-Mcu.Pin8=PA13
-Mcu.Pin9=PA14
+Mcu.Pin5=PB10
+Mcu.Pin6=PB12
+Mcu.Pin7=PA13
+Mcu.Pin8=PA14
+Mcu.Pin9=PA15
 Mcu.PinsNb=15
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
@@ -93,14 +93,17 @@ PA0-WKUP.GPIOParameters=GPIO_PuPd
 PA0-WKUP.GPIO_PuPd=GPIO_PULLDOWN
 PA0-WKUP.Locked=true
 PA0-WKUP.Signal=GPIO_Input
+PA1.GPIOParameters=PinState
 PA1.Locked=true
+PA1.PinState=GPIO_PIN_SET
 PA1.Signal=GPIO_Output
 PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
-PA4.Mode=Half_Duplex_Master
-PA4.Signal=I2S3_WS
+PA15.Locked=true
+PA15.Mode=Half_Duplex_Master
+PA15.Signal=I2S3_WS
 PB10.Mode=Half_Duplex_Slave
 PB10.Signal=I2S2_CK
 PB12.Mode=Half_Duplex_Slave
@@ -122,7 +125,11 @@ PCC.Vdd=3.3
 PDM2PCM.CHANNEL1_bit_order=PDM_FILTER_BIT_ORDER_MSB
 PDM2PCM.CHANNEL1_in_ptr_channels=1
 PDM2PCM.CHANNEL1_out_ptr_channels=1
-PDM2PCM.IPParameters=CHANNEL1_bit_order,CHANNEL1_in_ptr_channels,CHANNEL1_out_ptr_channels
+PDM2PCM.CHANNEL1_output_samples_number=48
+PDM2PCM.CHANNEL2_bit_order=PDM_FILTER_BIT_ORDER_MSB
+PDM2PCM.CHANNEL2_in_ptr_channels=2
+PDM2PCM.CHANNEL2_out_ptr_channels=2
+PDM2PCM.IPParameters=CHANNEL1_bit_order,CHANNEL1_out_ptr_channels,CHANNEL2_in_ptr_channels,CHANNEL2_out_ptr_channels,CHANNEL1_in_ptr_channels,CHANNEL2_bit_order,CHANNEL1_output_samples_number
 PH0-OSC_IN.Mode=HSE-External-Oscillator
 PH0-OSC_IN.Signal=RCC_OSC_IN
 PH1-OSC_OUT.Mode=HSE-External-Oscillator
