dsp: i2s3_ws now on PA15

--- a/dsp/f407_i2s_mic/f407_i2s_mic.ioc
+++ b/dsp/f407_i2s_mic/f407_i2s_mic.ioc
@@ -55,19 +55,19 @@ Mcu.Name=STM32F407V(E-G)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PH0-OSC_IN
 Mcu.Pin1=PH1-OSC_OUT
-Mcu.Pin10=PA13
-Mcu.Pin11=PA14
+Mcu.Pin10=PA14
+Mcu.Pin11=PA15
 Mcu.Pin12=PC10
 Mcu.Pin13=PC12
 Mcu.Pin14=VP_SYS_VS_Systick
 Mcu.Pin2=PC3
 Mcu.Pin3=PA0-WKUP
 Mcu.Pin4=PA1
-Mcu.Pin5=PA4
-Mcu.Pin6=PB10
-Mcu.Pin7=PB12
-Mcu.Pin8=PA9
-Mcu.Pin9=PA10
+Mcu.Pin5=PB10
+Mcu.Pin6=PB12
+Mcu.Pin7=PA9
+Mcu.Pin8=PA10
+Mcu.Pin9=PA13
 Mcu.PinsNb=15
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
@@ -101,8 +101,9 @@ PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
-PA4.Mode=Half_Duplex_Master
-PA4.Signal=I2S3_WS
+PA15.Locked=true
+PA15.Mode=Half_Duplex_Master
+PA15.Signal=I2S3_WS
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
 PB10.Mode=Half_Duplex_Slave
