--- a/freertos/freertos_queue/freertos_queue.ioc
+++ b/freertos/freertos_queue/freertos_queue.ioc
@@ -6,16 +6,16 @@ Mcu.Family=STM32F4
 Mcu.IP0=NVIC
 Mcu.IP1=RCC
 Mcu.IP2=SYS
-Mcu.IP3=USART1
+Mcu.IP3=USART2
 Mcu.IPNb=4
 Mcu.Name=STM32F411C(C-E)Ux
 Mcu.Package=UFQFPN48
 Mcu.Pin0=PC13-ANTI_TAMP
 Mcu.Pin1=PH0 - OSC_IN
 Mcu.Pin2=PH1 - OSC_OUT
-Mcu.Pin3=PA6
-Mcu.Pin4=PA9
-Mcu.Pin5=PA10
+Mcu.Pin3=PA0-WKUP
+Mcu.Pin4=PA2
+Mcu.Pin5=PA3
 Mcu.Pin6=PA13
 Mcu.Pin7=PA14
 Mcu.Pin8=PB3
@@ -24,11 +24,11 @@ Mcu.PinsNb=10
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F411CEUx
-MxCube.Version=5.5.0
-MxDb.Version=DB.5.0.50
+MxCube.Version=6.2.0
+MxDb.Version=DB.6.0.20
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.EXTI9_5_IRQn=true\:5\:0\:true\:false\:true\:true\:false
+NVIC.EXTI0_IRQn=true\:5\:0\:true\:false\:false\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false
@@ -40,36 +40,28 @@ NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:false\:false\:false
 NVIC.TIM1_UP_TIM10_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.TimeBase=TIM1_UP_TIM10_IRQn
 NVIC.TimeBaseIP=TIM1
-NVIC.USART1_IRQn=true\:5\:0\:true\:false\:true\:true\:false
+NVIC.USART2_IRQn=true\:5\:0\:true\:false\:false\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-PA10.Locked=true
-PA10.Mode=Asynchronous
-PA10.Signal=USART1_RX
+PA0-WKUP.GPIOParameters=GPIO_PuPd,GPIO_ModeDefaultEXTI
+PA0-WKUP.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
+PA0-WKUP.GPIO_PuPd=GPIO_PULLUP
+PA0-WKUP.Locked=true
+PA0-WKUP.Signal=GPXTI0
 PA13.Mode=Trace_Asynchronous_SW
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Trace_Asynchronous_SW
 PA14.Signal=SYS_JTCK-SWCLK
-PA6.GPIOParameters=GPIO_PuPd,GPIO_ModeDefaultEXTI
-PA6.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
-PA6.GPIO_PuPd=GPIO_PULLUP
-PA6.Locked=true
-PA6.Signal=GPXTI6
-PA9.Locked=true
-PA9.Mode=Asynchronous
-PA9.Signal=USART1_TX
+PA2.Mode=Asynchronous
+PA2.Signal=USART2_TX
+PA3.Mode=Asynchronous
+PA3.Signal=USART2_RX
 PB3.Locked=true
 PB3.Mode=Trace_Asynchronous_SW
 PB3.Signal=SYS_JTDO-SWO
+PC13-ANTI_TAMP.GPIOParameters=PinState
 PC13-ANTI_TAMP.Locked=true
+PC13-ANTI_TAMP.PinState=GPIO_PIN_SET
 PC13-ANTI_TAMP.Signal=GPIO_Output
-PCC.Checker=false
-PCC.Line=STM32F411
-PCC.MCU=STM32F411C(C-E)Ux
-PCC.PartNumber=STM32F411CEUx
-PCC.Seq0=0
-PCC.Series=STM32F4
-PCC.Temperature=25
-PCC.Vdd=null
 PH0\ -\ OSC_IN.Mode=HSE-External-Oscillator
 PH0\ -\ OSC_IN.Signal=RCC_OSC_IN
 PH1\ -\ OSC_OUT.Mode=HSE-External-Oscillator
@@ -84,7 +76,7 @@ ProjectManager.CustomerFirmwarePackage=
 ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32F411CEUx
-ProjectManager.FirmwarePackage=STM32Cube FW_F4 V1.24.2
+ProjectManager.FirmwarePackage=STM32Cube FW_F4 V1.26.0
 ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x200
@@ -97,11 +89,12 @@ ProjectManager.PreviousToolchain=
 ProjectManager.ProjectBuild=false
 ProjectManager.ProjectFileName=freertos_queue.ioc
 ProjectManager.ProjectName=freertos_queue
+ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_USART1_UART_Init-USART1-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_USART2_UART_Init-USART2-false-HAL-true
 RCC.48MHZClocksFreq_Value=100000000
 RCC.AHBFreq_Value=100000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -135,11 +128,10 @@ RCC.VCOInputFreq_Value=1000000
 RCC.VCOInputMFreq_Value=1562500
 RCC.VCOOutputFreq_Value=400000000
 RCC.VcooutputI2S=150000000
-SH.GPXTI6.0=GPIO_EXTI6
-SH.GPXTI6.ConfNb=1
-USART1.BaudRate=115200
-USART1.IPParameters=VirtualMode,BaudRate
-USART1.VirtualMode=VM_ASYNC
+SH.GPXTI0.0=GPIO_EXTI0
+SH.GPXTI0.ConfNb=1
+USART2.IPParameters=VirtualMode
+USART2.VirtualMode=VM_ASYNC
 VP_SYS_VS_tim1.Mode=TIM1
 VP_SYS_VS_tim1.Signal=SYS_VS_tim1
 board=custom
